[tool.poetry]
name = "clusteringwb"
version = "0.1.0"
description = "A tool for advanced clustering of text."
authors = ["code2k13 <ashpat.api@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.24.1"
tensorflow = "2.12.1"
tensorflow-hub = "^0.14.0"
tensorflow-text = "2.12.1"
plotly = "^5.15.0"
nltk = "^3.8.1"
pandas = "^2.0.3"
numpy = ">=1.22,<=1.24.3"
scikit-learn = "^1.3.0"
transformers = "^4.30.2"
opentsne = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
